--- a/sidebar-base/pom.xml
+++ b/sidebar-base/pom.xml
@@ -5,16 +5,29 @@
     <parent>
         <artifactId>sidebar-pom</artifactId>
         <groupId>com.andrei1058.spigot.sidebar</groupId>
-        <version>23.8-SNAPSHOT</version>
+        <version>23.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sidebar-base</artifactId>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
